--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Report</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
